--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,29 @@
 #image_logo {
-    width: 30%;
-    height: auto;
+    width: 400px;
+    height: 300px;
     flex-direction: column;
     justify-content: center;
+}
+
+.logo {
+  color: black ;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     width: auto;
-    height: 50%;
+    height: 100%;
     justify-content: center;
     text-align: center;
-    background-color: darkgray;
+    background-color: white;
     color: white;
 }
 
 mat-sidenav-container, mat-sidenav-content, mat-sidenav {
     height: 100%;
   }
-  
+
   mat-sidenav {
     width: 250px;
   }
@@ -32,4 +36,3 @@ mat-sidenav-container, mat-sidenav-content, mat-sidenav {
     margin : 20px;
     padding : 10px;
   }
-  
